Use JVM arguments suggested by CPW and another blog